show in commands + whitespace fix

--- a/app/src/components/ServerConsole.scss
+++ b/app/src/components/ServerConsole.scss
@@ -45,6 +45,10 @@
         padding-right: .5em;
       }
 
+      .body {
+        white-space: pre;
+      }
+
       &:first-child {
         padding-top: .25em;
       }
